cluster/base/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: dashboard
spec:
  type: ClusterIP
  selector:
    app: dashboard
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
